<resources>
    <!-- MANIFEST -->
    <string name="app_name">CashTroops</string>
    <string name="title_activity_main">CashTroops</string>
    <string name="title_activity_group_overview">Group\'s Overview</string>
    <string name="title_activity_group_list">Groups</string>
    <string name="title_activity_group_create">Create a Group</string>
    <string name="title_activity_group_history">History</string>
    <string name="title_activity_group_member">Members</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_group_invite">GroupInviteActivity</string>
    <string name="title_activity_create_event">CreateEventActivity</string>

    <!-- main -->
    <string name="overview">Overview</string>
    <string name="balance_text">Balance</string>
    <string name="balance_image_desc">Shows acoount\'s balance</string>

    <!-- Auth -->
    <string name="hint_name">Name</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="ask_register">Not a member? Register here</string>
    <string name="ask_login">Already a member? Login here</string>
    <string name="register_button">Register</string>
    <string name="minimum_password">Your password is too short, try again!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <!--NavigationACTIVITY-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="invite_member">Invite Member</string>

    <!-- CreateGroupActivity -->
    <string-array name="dates_in_month">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
        <item>11th</item>
        <item>12th</item>
        <item>13th</item>
        <item>14th</item>
        <item>15th</item>
        <item>16th</item>
        <item>17th</item>
        <item>18th</item>
        <item>19th</item>
        <item>20th</item>
        <item>21st</item>
        <item>22nd</item>
        <item>23rd</item>
        <item>24th</item>
        <item>25th</item>
        <item>26th</item>
        <item>27th</item>
        <item>28th</item>
        <item>29th</item>
        <item>30th</item>
        <item>31st</item>
    </string-array>

    <string-array name="currencies">
        <item>IDR</item>
        <item>USD</item>
    </string-array>

    <string-array name="overview_buttons_img">
        <item>img_profile</item>
        <item>img_invite</item>
        <item>img_members</item>
        <item>img_deposit</item>
        <item>img_event</item>
        <item>img_history</item>
        <item>img_withdraw</item>
        <item>img_qr</item>
        <item>img_settings</item>
    </string-array>

    <string-array name="overview_buttons_resources">
        <item>R.id.iv_overview_group_information</item>
        <item>R.id.iv_overview_group_add_member</item>
        <item>R.id.iv_overview_group_member</item>
        <item>R.id.iv_overview_group_deposit</item>
        <item>R.id.iv_overview_group_event</item>
        <item>R.id.iv_overview_group_history</item>
        <item>R.id.iv_overview_group_withdraw"</item>
        <item>R.id.iv_overview_group_qr</item>
        <item>R.id.iv_overview_group_settings</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
